- Replaced all references of 'search' with 'web shortcuts' since web shortcuts   are not only for doing search.

- Replaced all the WhatsThis help text with equivalent ToolTip text.

Note that this change only renames related config options, variables and GUI text.
In the future eveything, including file and class names, should be renamed to
reflect the current functionality of this plugin.

BUG: 196778
FIXED-IN: 4.9.0
GUI: